# unibot-guardian-gretel

./: .gitignore  .gitleaks.toml  AUTHORS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  exam_mode.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
scripts/: unibot_gretel_loop_smoke.py  unibot_loop_lab_smoke.py  unibot_pipeline_smoke.py
tests/: test_unibot_adaptive_tasks.py  test_unibot_api_and_public_safety.py  test_unibot_api_security_v2.py  test_unibot_autonomous_research_loop.py  test_unibot_autonomy_v2.py  test_unibot_autonomy_v3.py  test_unibot_bachelor_thesis.py  test_unibot_browser_extension.py  test_unibot_browser_extension_v2.py  test_unibot_clearance.py  test_unibot_cli_v2.py  test_unibot_companion_install.py  test_unibot_completion_audit.py  test_unibot_compliance.py  test_unibot_course_exam_coverage_dashboard.py  test_unibot_course_per_skill_action_router.py  test_unibot_course_tutor.py  test_unibot_decision_journal.py  test_unibot_decision_request.py  test_unibot_decision_state.py  test_unibot_demo.py  test_unibot_evaluation.py  test_unibot_exam_gateway.py  test_unibot_exam_notebook_checkpoint.py  test_unibot_exam_packet_timeline.py  test_unibot_exam_run_packet.py  test_unibot_exam_skill_drilldown.py  test_unibot_exam_workspace_launch_flow.py  test_unibot_exam_workspace_operator_run.py  test_unibot_exam_workspace_run.py  test_unibot_exam_workspace_run_history.py  test_unibot_exam_workspace_session_console.py  test_unibot_extension_package.py  test_unibot_external_decision_journal.py  test_unibot_extraction.py  test_unibot_extraction_batches.py  test_unibot_extraction_completion.py  test_unibot_extraction_decision.py  test_unibot_extraction_decision_intake.py  test_unibot_extraction_decision_workspace.py  (+106 more)
unibot/: __init__.py  adaptive_tasks.py  autonomous_research_loop.py  autonomy_v2.py  autonomy_v3.py  autonomy_work_items.json  bachelor_thesis.py  clearance.py  cli.py  companion.py  completion_audit.py  compliance.py  course_exam_coverage_dashboard.py  course_per_skill_action_router.py  course_tutor.py  decision_journal.py  decision_request.py  decision_state.py  demo.py  evaluation.py  exam_notebook_checkpoint.py  exam_packet_timeline.py  exam_run_packet_builder.py  exam_skill_drilldown.py  exam_workspace_launch_flow.py  exam_workspace_operator_run.py  exam_workspace_run.py  exam_workspace_run_history.py  exam_workspace_session_console.py  extension_package.py  external_decision_journal.py  extraction.py  extraction_batches.py  extraction_completion.py  extraction_decision.py  (+111 more)
(+51 files in other folders)
