[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unibot-guardian"
version = "0.1.0"
description = "Open-science Socratic integrity layer for coding-practice AI workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "UniBot Guardian contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.setuptools]
packages = ["unibot"]
py-modules = ["exam_mode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
